# LocalGPT

./: docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/crud/: conversation.py  message.py
backend/app/database/: config.py  models.py
backend/app/routes/: conversation.py  message.py
backend/app/schemas/: conversation.py  message.py
backend/migrations/models/: 1_20251113192548_None.py
backend/services/: ollama.py
frontend/: .env.local  Dockerfile  package.json  tailwind.config.js  vite.config.js
frontend/components/: ChatWindow.jsx  Message.jsx  MessageInput.jsx
frontend/src/: App.jsx  index.css
frontend/src/api/: chat.js
